# src/routes/index.js
@@ -1,8 +1,8 @@
 const express = require('express')
 const users = require('./userRouter')
 
-const router = express.Router();  
+const router = express.Router()
 
-router.use("/user",users)
+router.use('/user', users)
 
 module.exports = router
