# src/routes/userRouter.js
@@ -1,9 +1,10 @@
 const express = require('express')
 const { userController } = require('../controllers')
+const validUser = require('../validations').userValidator
 
 const users = express.Router()
 
-users.post('/user', userController.register)
-users.get('/user/login', userController.login)
+users.post('/', validUser, userController.register)
+users.get('/login', userController.login)
 
 module.exports = users
