# swagger.json
@@ -15,7 +15,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:4000/api/"
+      "url": "http://localhost:3000/api/"
     }
   ],
   "tags": [
@@ -25,12 +25,12 @@
     }
   ],
   "paths": {
-    "/user": {
+    "/user/": {
       "post": {
         "tags": [
           "User"
         ],
-        "summary": "Create user",
+        "summary": "Create User",
         "description": "Create a User",
         "parameters": [],
         "responses": {
@@ -57,7 +57,7 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "msg": {
+                    "error": {
                       "type": "string",
                       "example": "Internal Error"
                     }
@@ -71,7 +71,7 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "msg": {
+                    "error": {
                       "type": "string",
                       "example": "Internal Error"
                     }
@@ -84,7 +84,16 @@
             }
           }
         },
-        "requestBody": {}
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            }
+          }
+        }
       }
     },
     "/user/login": {
